<resources>
    <string name="app_name" translatable="false">DFM Radio</string>
    <string name="by_string">by</string>
    <string name="item_search">Search</string>
    <string name="item_settings">Settings</string>
    <string name="item_about_us">About us</string>
    <string name="search_episodes">Search episode…</string>
    <string name="deep_fm_radio_podcast_logo" translatable="false">Deep FM Radio Podcast Logo</string>
    <string name="eepfm_radio" translatable="false">eepFM Radio</string>
    <string name="play_video">Play video</string>
    <string name="pause_video">Pause video</string>
    <string name="episode_thumbnail">Episode thumbnail</string>
    <string name="episode_to_player_transition" translatable="false">Episode to player transition</string>
    <string name="return_to_main_screen">Return to Main Screen</string>
    <string name="toggle_full_screen_on_off">Toggle full screen on/off</string>
    <string name="share_media">Share media</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="share_episode">Share episode</string>

    <string name="favorite_shows">Favorites</string>
    <string name="all_shows">All</string>
    <string name="d_youth_show">D-Youth</string>
    <string name="d_hits_show">D-Hits</string>
    <string name="d_testify_show">D-Testify</string>
    <string name="d_love_show">D-Love</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_language">Language</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_about">About</string>
    <string name="key_notifications" translatable="false">key_notifications</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="key_notification_sound" translatable="false">key_notification_sound</string>
    <string name="choose_notification_alert_sound">Choose notification alert sound</string>
    <string name="notification_sound">Notification sound</string>
    <string name="key_vibration" translatable="false">key_vibration</string>
    <string name="choose_language">Choose language</string>
    <string name="key_app_language" translatable="false">key_app_language</string>
    <string name="choose_preferred_language">Choose your preferred language</string>
    <string-array translatable="false" name="languages_array">
        <item>English</item>
        <item>Swahili</item>
    </string-array>
    <string name="english_lang" translatable="false">English</string>
    <string name="swahili_lang" translatable="false">Swahili</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>
    <string name="key_app_version" translatable="false">key_app_version</string>
    <string name="app_version">App version</string>
    <string name="key_about" translatable="false">key_about</string>
    <string name="deep_fm_radio" translatable="false">Deep FM Radio</string>
    <string name="about_dfm_radio">About DFM Radio</string>
    <!-- End Strings related to Settings -->

    <string name="network_error_message">Network error! Please check your internet connection and click retry.</string>
    <string name="no_episodes_found_tap_to_refresh">No episodes found, tap to refresh.</string>
    <string name="no_favorite_episodes_added">No favorite episodes added, tap to reload.</string>
    <string name="episode_removed">Episode removed from favorites</string>
    <string name="error_removing_episode">Error removing episode from favorites</string>
    <string name="error_adding_episode_to_favorites">Error adding episode to favorites</string>
    <string name="episode_added_to_favorites">Episode added to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="error_sharing_episode">Error sharing episode</string>
    <string name="allow_storage_permission"><![CDATA[To share episodes you need to grant storage access permission to this app. Click settings => permissions => turn storage permission on.]]></string>
    <string name="app_settings">Settings</string>
    <string name="retry_load">Retry</string>
    <string name="the_episode_appears_to_be_missing_tap_to_view_other_episodes">The episode appears to be missing, tap to view other episodes.</string>
    <string name="listen_now">Listen now on DFM Radio Podcast</string>
    <string name="watch_now">Watch now on DFM Radio Podcast</string>
    <string name="no_episodes_found">No episodes found.</string>
    <string name="which_episode_do_you_want_to_search">Which episode do you want to search?</string>
    <string name="add_widget">Add widget</string>
    <string name="go_to_previous_activity">Go to previous activity</string>
    <string name="add_more_favorite_episodes">Add more favorite episodes</string>
    <string name="dfm_favorite_episodes">Favorite episodes</string>
    <string name="add_favorite_episodes">Add favorite episodes</string>
    <string name="unsupported_uri">Unsupported URI:</string>
    <string name="failed_to_add_record">Failed to add record</string>
    <string name="unknown_uri">Unknown URI</string>
</resources>
